--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -18,7 +18,20 @@ add_library( # Sets the name of the library.
 
         # Provides a relative path to your source file(s).
         src/main/cpp/native-lib.cpp
-        src/main/cpp/a.cpp)
+        src/main/cpp/a.cpp
+#        src/main/cpp/uc_slave_pipe.cpp
+        )
+
+add_library( # Sets the name of the library.
+        fr_ue
+
+        # Sets the library as a shared library.
+        SHARED
+
+        # Provides a relative path to your source file(s).
+        src/main/cpp/uc_slave_pipe.cpp
+        )
+
 
 # Searches for a specified prebuilt library and stores the path as a
 # variable. Because CMake includes system libraries in the search path by
@@ -40,9 +53,19 @@ find_library( # Sets the name of the path variable.
 # can link multiple libraries, such as libraries you define in this
 # build script, prebuilt third-party libraries, or system libraries.
 
+#target_link_libraries( # Specifies the target library.
+#        native-lib
+#
+#        # Links the target library to the log library
+#        # included in the NDK.
+#        ${log-lib})
+
 target_link_libraries( # Specifies the target library.
         native-lib
 
         # Links the target library to the log library
         # included in the NDK.
-        ${log-lib})
+        ${log-lib}
+        D:/develop/code/NdkProject/app/src/main/jniLibs/armeabi-v7a/libucLight.so
+#        fr_ue
+        )
