--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,7 @@ android {
         externalNativeBuild {
             cmake {
                 cppFlags ""
-                abiFilters 'armeabi-v7a'// ,  'x86'//,'x86_64', 'armeabi-v7a', 'x86_64', 'arm64-v8a'
+                abiFilters 'armeabi-v7a' ,  'x86'//,'x86_64', 'armeabi-v7a', 'x86_64', 'arm64-v8a'
             }
         }
     }
